[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/GreyBackground.jpg" type="Texture" id=1]
[ext_resource path="res://assets/towers/tower_idling.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://src/InfoScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/asteroid.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 39.431, 37.842 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 40.8376, 39.2484 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 50.1655, 19.032 )

[node name="InfoScreen" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 299.686 ],
"_edit_vertical_guides_": [ 499.312, 74.5901 ]
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 450.242
margin_top = 426.933
margin_right = 550.242
margin_bottom = 476.933
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBackground" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.541176 )
margin_left = 372.0
margin_top = 57.0
margin_right = 1008.0
margin_bottom = 734.0
rect_scale = Vector2( 1, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserTower" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="LaserTower"]
position = Vector2( 135.714, 109.696 )
scale = Vector2( 4.5, 4.5 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserTower"]
position = Vector2( 137.824, 109.696 )
shape = SubResource( 5 )

[node name="InfoText" type="RichTextLabel" parent="."]
margin_left = 387.0
margin_top = 68.0
margin_right = 996.0
margin_bottom = 382.0
custom_fonts/normal_font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asteroid" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Asteroid"]
position = Vector2( 267.209, 111.103 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Asteroid"]
position = Vector2( 268.616, 108.29 )
shape = SubResource( 8 )

[node name="Cheats" type="Area2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Cheats"]
margin_left = 172.188
margin_top = 340.488
margin_right = 271.188
margin_bottom = 378.488
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Cheats"]
margin_left = 189.497
margin_top = 346.488
margin_right = 279.497
margin_bottom = 391.488
custom_fonts/font = SubResource( 10 )
text = "Cheats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cheats"]
position = Vector2( 223.385, 358.555 )
shape = SubResource( 11 )
[connection signal="button_down" from="BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="mouse_entered" from="LaserTower" to="." method="_on_LaserTower_mouse_entered"]
[connection signal="mouse_exited" from="LaserTower" to="." method="_on_LaserTower_mouse_exited"]
[connection signal="mouse_entered" from="Asteroid" to="." method="_on_Asteroid_mouse_entered"]
[connection signal="mouse_exited" from="Asteroid" to="." method="_on_Asteroid_mouse_exited"]
[connection signal="mouse_entered" from="Cheats" to="." method="_on_Cheats_mouse_entered"]
[connection signal="mouse_exited" from="Cheats" to="." method="_on_Cheats_mouse_exited"]
